--- a/backend.yml
+++ b/backend.yml
@@ -5,7 +5,7 @@
     - name: Disable NodeJS default Version
       ansible.builtin.shell: dnf module disable nodejs -y
     - name: Enable NodeJS 18 Version
-      ansible.builtin.shell: module enable nodejs:18 -y
+      ansible.builtin.shell: dnf module enable nodejs:18 -y
     - name: Install NodeJS
       ansible.builtin.dnf:
         name: nodejs
