--- a/roles/elk/tasks/filebeat.yml
+++ b/roles/elk/tasks/filebeat.yml
@@ -2,3 +2,9 @@
   ansible.builtin.template:
     src: elastic.repo
     dest: /etc/yum.repos.d/elastic.repo
+
+- name: install Filebeat
+  ansible.builtin.dnf:
+    name: filebeat
+    state: installed
+
