Adding shell Topics

--- a/roles/elk/tasks/filebeat.yml
+++ b/roles/elk/tasks/filebeat.yml
@@ -3,5 +3,20 @@
     src: elastic.repo
     dest: /etc/yum.repos.d/elastic.repo
 
+- name: install Filebeat
+  ansible.builtin.dnf:
+    name: filebeat
+    state: installed
+
+- name: Copy Filebeat Configuration
+  ansible.builtin.template:
+    src: filebeat.yml
+    dest: /etc/filebeat/filebeat.yml
+
+- name: Restart Filebeat
+  ansible.builtin.systemd:
+    name: filebeat
+    state: restarted
+    enabled: yes
 
 
