--- a/roles/elk/templates/filebeat.yml
+++ b/roles/elk/templates/filebeat.yml
@@ -22,7 +22,7 @@ filebeat.inputs:
   - type: filestream
 
     # Unique ID among all inputs, an ID is required.
-    id: {{ component }}
+    id: { { component } }
 
     # Change to true to enable this input configuration.
     enabled: true
@@ -49,9 +49,9 @@ filebeat.inputs:
 
     # Optional additional fields. These fields can be freely picked
     # to add additional information to the crawled log files for filtering
-    fields:
-      component: {{  component }}
-
+    #fields:
+    # level: debug
+    # review: 1
 # ============================== Filebeat modules ==============================
 
 filebeat.config.modules:
@@ -134,9 +134,9 @@ setup.kibana:
 # Configure what output to use when sending the data collected by the beat.
 
 # ---------------------------- Elasticsearch Output ----------------------------
-output.elasticsearch:
-  # Array of hosts to connect to.
-  hosts: ["localhost:9200"]
+#output.elasticsearch:
+#  # Array of hosts to connect to.
+#  hosts: ["localhost:9200"]
 
   # Protocol - either `http` (default) or `https`.
   #protocol: "https"
@@ -149,7 +149,7 @@ output.elasticsearch:
 # ------------------------------ Logstash Output -------------------------------
 output.logstash:
   # The Logstash hosts
-  hosts: [" 172.31.46.120:5044"]
+  hosts: [" 1172.31.25.94:5044"]
 
   # Optional SSL. By default is off.
   # List of root certificates for HTTPS server verifications
@@ -228,4 +228,5 @@ processors:
 
 # This allows to enable 6.7 migration aliases
 #migration.6_to_7.enabled: true
+
 
