--- a/roles/elk/tasks/filebeat.yml
+++ b/roles/elk/tasks/filebeat.yml
@@ -1,3 +1,15 @@
+- name: Copy Rsyslog conf
+  ansible.builtin.template:
+    src: rsyslog.conf
+    dest: /etc/rsyslog.d/{{component}}.conf
+  when: is_rsyslog_needed
+
+- name: Restart rsyslog service
+  ansible.builtin.systemd:
+    name: rsyslog
+    state: restarted
+  when: is_rsyslog_needed
+
 - name: Copy Elastic YUM Repo file
   ansible.builtin.template:
     src: elastic.repo
