--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -19,15 +19,10 @@ rule_files:
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this con                                                                                                fig.
+  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.                                                                                                fig.
   - job_name: "prometheus"
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
     static_configs:
       - targets: ["localhost:9090"]
   - job_name: ec2-nodes
-    static_configs:
-      - targets: ["172.31.46.120:9100"]
-
+    ec2_sd_configs:
+      - region: us-east-1
