--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -24,9 +24,17 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
   - job_name: ec2-nodes
+    relabel_configs:
+      - source_labels: [_meta_ec2_instance_id]
+        target_label: instance_id
+      - source_labels: [_meta_ec2_private_ip ]
+        target_label: private_ip
+      - source_labels: [_meta_ec2_tag_Name ]
+        target_label: name
     ec2_sd_configs:
       - region: us-east-1
         port: 9100
         filters:
           - name: "tag:Monitor"
             values: ["true"]
+
