prometheus ANsible change

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -32,4 +32,9 @@
     name: prometheus
     tasks_from: node-exporter
 
+- name: Import Grafana - Dashboard Creation
+  ansible.builtin.import_role:
+    name: prometheus
+
+
 
